--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "npx tsc --noEmit",
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "ts-node-dev --respawn src/app.ts"
   },
   "repository": {
     "type": "git",
